--- a/afterindex.html
+++ b/afterindex.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htlm lang="es-co">
+<html lang="es-co">
 <head>
     <title>Glosario Segunda Pagina
     </title>   
@@ -87,4 +87,4 @@
         
     </body>
 </head>
-</htlm>
+</html>
